# gnome-control-center

./: Makefile.am  configure.ac  meson.build  meson_options.txt  meson_post_install.py
panels/: meson.build
panels/background/: Makefile.am  background.ui  bg-colors-source.c  bg-source.c  bg-wallpapers-source.c  cc-background-chooser-dialog.c  cc-background-grid-item.c  cc-background-panel.c  gnome-background-panel.desktop.in.in  meson.build
panels/bluetooth/: gnome-bluetooth-panel.desktop.in.in  meson.build
panels/color/: cc-color-calibrate.c  cc-color-panel.c  gnome-color-panel.desktop.in.in  meson.build
panels/color/icons/: meson.build
panels/common/: Makefile.am  gsd-device-manager-x11.c  meson.build
panels/datetime/: gnome-datetime-panel.desktop.in.in  meson.build
panels/datetime/icons/: meson.build
panels/datetime/po-timezones/: meson.build
panels/display/: cc-display-panel.c  gnome-display-panel.desktop.in.in  meson.build  scrollarea.c  scrollarea.h
panels/display/icons/: meson.build
panels/info/: Makefile.am  cc-info-default-apps-panel.c  cc-info-overview-panel.c  cc-info-panel.c  cc-info-removable-media-panel.c  gnome-default-apps-panel.desktop.in.in  gnome-info-overview-panel.desktop.in.in  gnome-info-panel.desktop.in.in  gnome-removable-media-panel.desktop.in.in  gsd-disk-space-helper.c  info-cleanup.c  meson.build
panels/keyboard/: 01-launchers.xml  01-screenshot.xml  cc-keyboard-manager.c  cc-keyboard-option.c  cc-keyboard-option.h  cc-keyboard-panel.c  cc-keyboard-shortcut-editor.c  gnome-keyboard-panel.desktop.in.in  meson.build
panels/mouse/: gnome-mouse-panel.desktop.in.in  gnome-mouse-properties.c  gnome-mouse-properties.ui  gnome-mouse-test.c  meson.build
panels/network/: cc-network-panel.h  cc-wifi-panel.h  gnome-network-panel.desktop.in.in  gnome-wifi-panel.desktop.in.in  meson.build  net-device-ethernet.c  net-device-ethernet.h  net-device-mobile.c  net-device-simple.h  net-device-wifi.c  net-device-wifi.h  net-device.c  net-device.h  net-object.c  net-object.h  net-proxy.c  net-vpn.c
panels/network/connection-editor/: ce-page-8021x-security.c  ce-page-8021x-security.h  ce-page-details.c  ce-page-details.h  ce-page-ethernet.c  ce-page-ethernet.h  ce-page-ip4.c  ce-page-ip4.h  ce-page-ip6.c  ce-page-ip6.h  ce-page-security.c  ce-page-security.h  ce-page-vpn.c  ce-page-vpn.h  ce-page-wifi.c  ce-page-wifi.h  ce-page.c  ce-page.h  meson.build  net-connection-editor.c  net-connection-editor.h
panels/network/wireless-security/: meson.build
panels/notifications/: gnome-notifications-panel.desktop.in.in  meson.build
panels/online-accounts/: gnome-online-accounts-panel.desktop.in.in  meson.build
panels/online-accounts/icons/: meson.build
panels/power/: cc-power-panel.c  gnome-power-panel.desktop.in.in  meson.build
panels/power/icons/: meson.build
panels/printers/: cc-printers-panel.c  gnome-printers-panel.desktop.in.in  meson.build  pp-cups.c  pp-cups.h  pp-job.c  pp-job.h  pp-new-printer-dialog.c  pp-printer-entry.c  pp-printer-entry.h  pp-printer.c
panels/privacy/: cc-privacy-panel.c  gnome-privacy-panel.desktop.in.in  meson.build
panels/region/: cc-region-panel.c  gnome-region-panel.desktop.in.in  meson.build
panels/search/: cc-search-panel.c  gnome-search-panel.desktop.in.in  meson.build
panels/sharing/: cc-sharing-networks.c  cc-sharing-panel.c  gnome-sharing-panel.desktop.in.in  meson.build
panels/sound/: meson.build
panels/sound/data/icons/: meson.build
panels/sound/data/symbolic-icons/: meson.build
panels/universal-access/: cc-ua-panel.c  gnome-universal-access-panel.desktop.in.in  meson.build  zoom-options.c  zoom-options.h
panels/user-accounts/: meson.build  um-account-dialog.c  um-carousel.h  um-cell-renderer-user-image.c  um-cell-renderer-user-image.h  um-realm-manager.c  um-realm-manager.h  um-user-panel.c
panels/user-accounts/data/: gnome-user-accounts-panel.desktop.in.in
panels/wacom/: cc-wacom-page.c  cc-wacom-stylus-page.c  gnome-wacom-panel.desktop.in.in  gsd-wacom-key-shortcut-button.c  meson.build
po/: POTFILES.in  POTFILES.skip  meson.build
search-provider/: meson.build
shell/: Makefile.am  gnome-control-center.desktop.in.in  meson.build
shell/alt/: Makefile.am  meson.build
shell/appdata/: meson.build
shell/completions/: meson.build
